<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="true">Society</string>
    <!-- Strings related to login -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="prompt_email" translatable="false">Username</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in_short" translatable="false">SIGN IN ADMIN</string>
    <string name="welcome" translatable="true">Hello!</string>
    <string name="hello" translatable="true">Welcome!</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">At least 10 characters</string>
    <string name="invalid_phone" translatable="false">Invalid Number</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="username" translatable="false">Username</string>
    <string name="sign_in_admin" translatable="false">SIGN IN ADMIN</string>
    <string name="sign_up_admin" translatable="false">SIGN UP ADMIN</string>
    <string name="sign_in_member">SIGN IN MEMBER</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="register">Register</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="password">Password</string>
    <string name="Password">Password</string>
    <string name="Sign_Up_here">Sign Up here</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Sign_up_or_Register">Sign_Up_or_Register</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">sign_in</string>
    <string name="Sign_up_here">Sign_Up_Here</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="sign_in_here">SIGN_IN</string>
    <string name="Sign_in">sign in</string>
    <string name="textview">TextView</string>
    <string name="title_activity_sign_up">Sign_up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sign_up_admin1">SIGN UP ADMIN</string>
    <string name="sign_up_member">SIGN UP MEMBER</string>
    <string name="email">Email</string>
    <string name="title_activity_login">Login</string>
    <string name="phone">Phone</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="title_activity_userdashboard">userdashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawerdashboard">drawerdashboard</string>
    <string name="title_activity_ultramain">ultramain</string>
    <string name="title_activity_ultradrawer">ultradrawer</string>
    <string name="title_activity_main_activitydash">MainActivitydash</string>
</resources>